--- a/frontend/analysis_options.yaml
+++ b/frontend/analysis_options.yaml
@@ -22,6 +22,7 @@ linter:
   # producing the lint.
   rules:
     prefer_const_constructors: true
+    sort_child_properties_last: true
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
