--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.1
   smooth_page_indicator: ^1.2.1
+  flutter_feather_icons: ^2.0.0+1
+  flutter_svg: ^2.2.1
+  form_field_validator: ^1.1.0
+  toastification: ^3.0.3
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +71,7 @@ flutter:
   assets:
     - assets/images/onboarding/
     - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
