Migrate navigation to GetX and add API client
Replaced Riverpod-based navigation and state management with GetX across the frontend, including route definitions, navigation calls, and state controllers for navigation. Added reusable API client using Dio and introduced a user model for authentication. Updated UI components and layouts to use GetX controllers and navigation, and improved button loading states. Also updated .gitignore to exclude .env files and removed the backend .env file from version control.

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -41,7 +41,9 @@ dependencies:
   form_field_validator: ^1.1.0
   toastification: ^3.0.3
   pin_code_fields: ^8.0.1
-  flutter_riverpod: ^2.6.1
+  dio: ^5.9.0
+  flutter_secure_storage: ^9.2.4
+  get: ^4.7.2
 
 dev_dependencies:
   flutter_test:
