Implement forgot/reset password and .env config support
Added forgot password and reset password endpoints to backend with validation and service logic. Updated frontend to support forgot/reset password flows, including OTP verification and error handling. Introduced flutter_dotenv and .env file for backend URL configuration, replacing hardcoded API URLs. Improved category and product forms to fetch categories dynamically. Minor bug fixes and UI improvements for category and OTP screens.

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   dio: ^5.9.0
   flutter_secure_storage: ^9.2.4
   get: ^4.7.2
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +78,7 @@ flutter:
     - assets/icons/
     - assets/images/user/
     - assets/images/products/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
