--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -14,6 +14,21 @@ MONGO_URI=YOUR_MONGO_URI
 # =========================
 JWT_SECRET=YOUR_JWT_SECRET
 
+
+# =========================
+# Email Configuration
+# =========================
+EMAIL_USERNAME=YOUR_EMAIL_USERNAME
+EMAIL_PASSWORD=YOUR_EMAIL_PASSWORD
+
+# =========================
+# Cloudinary Configuration
+# =========================
+CLOUDINARY_CLOUD_NAME=YOUR_CLOUDINARY_CLOUD_NAME
+CLOUDINARY_API_KEY=YOUR_CLOUDINARY_API_KEY
+CLOUDINARY_API_SECRET=YOUR_CLOUDINARY_API_SECRET
+
+
 # =========================
 # Firebase Admin Configuration
 # =========================
