--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
   google_sign_in: ^7.2.0
+  cookie_jar: ^4.0.8
+  dio_cookie_manager: ^3.3.0
 
 dev_dependencies:
   flutter_test:
