--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_sign_in: ^7.2.0
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.3.0
+  skeletonizer: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
