Integrate Razorpay payment gateway in app
Added Razorpay backend endpoints, service, and configuration for payment processing. Updated frontend to support Razorpay payments, including order creation, payment verification, and UI changes. Refactored related controllers and models to support Razorpay, and improved user feedback with loading toasts. Updated dependencies to include Razorpay packages.

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   cookie_jar: ^4.0.8
   dio_cookie_manager: ^3.3.0
   skeletonizer: ^2.1.0+1
+  razorpay_flutter: ^1.4.0
 
 dev_dependencies:
   flutter_test:
