--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -43,3 +43,10 @@ FIREBASE_TOKEN_URI=https://oauth2.googleapis.com/token
 FIREBASE_AUTH_PROVIDER_X509_CERT_URL=https://www.googleapis.com/oauth2/v1/certs
 FIREBASE_CLIENT_X509_CERT_URL=YOUR_FIREBASE_CLIENT_X509_CERT_URL
 FIREBASE_UNIVERSE_DOMAIN=googleapis.com
+
+# =========================
+# Razorpay Configuration
+# =========================
+
+RAZORPAY_KEY_ID=YOUR_RAZORPAY_KEY_ID
+RAZORPAY_KEY_SECRET=YOUR_RAZORPAY_KEY_SECRET
