--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "set NODE_ENV=development && nodemon src/server.js",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
-    "seed": "node seed-products.js"
+    "start": "set NODE_ENV=production && node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +30,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
+    "razorpay": "^2.9.6",
     "uuid": "^13.0.0",
     "winston": "^3.17.0",
     "zod": "^4.1.8"
